<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/logo_w"
        android:layout_height="@dimen/logo_h"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginTop="@dimen/logo_top_margin"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_margin="@dimen/layout_margin"
        android:gravity="center_horizontal"
        android:hint="@string/hint_username"
        android:singleLine="true" />

    <TextView
        android:id="@+id/pw_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="-20dp"
        android:background="@drawable/location_tip"
        android:text="@string/long_click_tip"
        android:textColor="@color/actionbar_text" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name"
        android:layout_margin="@dimen/layout_margin"
        android:gravity="center_horizontal"
        android:hint="@string/hint_password"
        android:paddingRight="20dp"
        android:password="true"
        android:singleLine="true"
        android:textIsSelectable="false" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignBottom="@+id/user_password"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:src="@drawable/delete_bg_selector" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_password"
        android:layout_margin="@dimen/margin50"
        android:background="@drawable/button_bg_selector"
        android:singleLine="true"
        android:text="@string/text_login"
        android:textColor="@color/actionbar_text" />

    <TextView
        android:id="@+id/ver_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="3dp"
        android:textColor="@color/action_bar_bg"
        tools:text="版本号:1.2r" />
</RelativeLayout>